# libraryManagementSystem

./: .env.example  .gitignore  .pre-commit-config.yaml  initial.cmd  pip-requirements.txt  poetry.toml  pyproject.toml  requirements-base.txt  requirements.txt  setup.py
deprecated/: initial.cmd  setup.py
src/LMS/: api.py  config.py  enum.py  logging.py  main.py  models.py
src/LMS/book/: models.py  views.py
src/LMS/database/: core.py
src/LMS/user/: models.py  service.py  views.py
